--- a/Icecream.html
+++ b/Icecream.html
@@ -50,7 +50,7 @@
 
     <section class="orderResultDisplay">
       <div class="orderReady"></div>
-      <section class="icecreamCone">
+      <div class="icecreamCone">
         <span class="cone"></span>
         <span class="addScoop">
           <div class="toppings">
@@ -65,7 +65,7 @@
           </div>
         </span>
         
-      </section>
+      </div>
       
     </section>
 
